# seu_utils

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/choose_classes/: Cargo.toml
crates/choose_classes/src/: lib.rs  utils.rs
crates/get_grades/: Cargo.toml
crates/get_grades/src/: lib.rs  utils.rs
