[package]
name = "choose_classes"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
serde_yaml = "0.9.34"
base64 = "0.22.1"
image = "0.25.5"


[[bin]]
name = "choose_classes"
path = "src/bin/choose_classes/main.rs"

[[bin]]
name = "get_tokens"
path = "src/bin/get_tokens/main.rs"