[package]
name = "choose_classes"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
urlencoding = "2.1.3"
serde_yaml = "0.9.34"
base64 = "0.22.1"
image = "0.25.5"
clap = { version = "4.5.30", features = ["derive"] }


[[bin]]
name = "choose_classes"
path = "src/bin/choose_classes.rs"

[[bin]]
name = "get_tokens"
path = "src/bin/get_tokens.rs"